<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickListener"
            type="com.airlift.airliftcryptoconverter.interfaces.ConvertCurrencyMoveHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="8dp">

        <TableLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:background="@color/darkBrown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:id="@+id/table_row"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txt_rank"
                    style="@style/TableItems"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:layout_weight=".5"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/rank_title" />

                <TextView
                    android:id="@+id/txt_name"
                    style="@style/TableItems"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:layout_weight="2"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/name_title" />

                <TextView
                    android:id="@+id/txt_symbol"
                    style="@style/TableItems"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/symbol_title" />

                <TextView
                    android:id="@+id/txt_price"
                    style="@style/TableItems"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_column="3"
                    android:layout_weight="1.5"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/price_title" />

            </TableRow>

        </TableLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            app:layout_constraintBottom_toTopOf="@id/btnConvertCurrency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:listitem="@layout/crypto_list_item" />


        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="76dp"
            android:layout_height="69dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConvertCurrency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBtnConvertCurrencyBottom"
            android:onClick="@{(view)->clickListener.onFragTransaction(view)}"
            android:text="@string/convertCurrencies"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"></com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>